2005-08-15  Veerapuram Varadhan <vvaradhan@novell.com>

	* gnome-wp-capplet.c (gnome_wp_props_wp_set):
	(gnome_wp_color[12]_changed, gnome_wp_options_changed):
	(gnome_wp_shading_changed, wallpaper_properties_init):
	Enable/disable the style-menu, shading-menu and color-picker
	buttons w.r.t gconf-keys.
	(gnome_wp_set_sensitivities): Utility function to take care of
	enabling/disabling widgets w.r.t gconf-keys.
	(gnome_wp_props_wp_set): Don't set the sensitivity of the remove and
	style buttons here. Just call the new method to do it instead

2005-07-25  Sebastien Bacher <seb128@debian.org>

	* gnome-wp-capplet.c (gnome_wp_{scale,shade}_type_changed):
	Update for the changed signal of the option menus
	(wallpaper_properties_init): Connect to the changed signal of
	the scale and color style option menus

	Fixes #157396

2005-07-25  Sebastien Bacher <seb128@debian.org>

	* gnome-background-properties.glade: Replace GnomeColorPicker with
	the GtkColorButton widget
	Some properties were added by newer version of glade

	* gnome-wp-capplet.c (gnome_wp_props_wp_set):
	(gnome_wp_[s]color_changed, gnome_wp_color[12]_changed):
	(gnome_wp_load_stuffs, wallpaper_properties_init):
	Update to use the API for GtkColorButton instead of GnomeColorPicker

	Fixes #171676

2005-07-14  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-xml.c (gnome_wp_xml_load_xml): If xmlParseFile returns
	NULL, then just return, rather than trying to parse the document

	Fixes #310041

2005-07-13  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-info.c (gnome_wp_info_new): Pass the md5sum to the call
	to g_strconcat to create the path to the thumbnail file

	Fixes #310293

2005-07-10  Rodney Dawes  <dobey@novell.com>

	* gnome-wp-capplet.[ch]:
	(gnome_wp_icon_theme_changed):
	(wallpaper_properties_init):
	Update to use GtkIconTheme rather than GnomeIconTheme
	Based on patch from Jan de Groot

	Fixes #171677

2005-07-10  Rodney Dawes  <dobey@novell.com>
